--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="flex flex-col items-center">
                         <div>
                             <div
-                                class="bg-[url(/assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
@@ -90,14 +90,10 @@
                                 <h3>Parler en public</h3>
                                 <p>Sonia lefèvre | Coach prise de parole</p>
                                 <div class="flex">
-                                    <img
-                                        src="assets/images/star.svg"
-                                        alt="Image d'une étoile"
-                                    />
-                                    <img
-                                        src="assets/images/star.svg"
-                                        alt="Image d'une étoile"
-                                    />
+                                    <img src=assets/images/star.svg" alt="Image
+                                    d'une étoile" /> <img
+                                    src=assets/images/star.svg" alt="Image d'une
+                                    étoile" />
                                     <img
                                         src="assets/images/star.svg"
                                         alt="Image d'une étoile"
@@ -118,7 +114,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(/assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
@@ -159,7 +155,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(/assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
@@ -198,7 +194,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(/assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
@@ -254,7 +250,7 @@
                     <div class="flex flex-col items-center">
                         <div>
                             <div
-                                class="bg-[url(/assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
@@ -297,7 +293,7 @@
 
                         <div>
                             <div
-                                class="bg-[url(/assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
@@ -339,7 +335,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(/assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
@@ -381,7 +377,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(/assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
