--- a/index.html
+++ b/index.html
@@ -90,10 +90,16 @@
                                 <h3>Parler en public</h3>
                                 <p>Sonia lefèvre | Coach prise de parole</p>
                                 <div class="flex">
-                                    <img src=assets/images/star.svg" alt="Image
-                                    d'une étoile" /> <img
-                                    src=assets/images/star.svg" alt="Image d'une
-                                    étoile" />
+                                    <img
+                                        src="assets/images/star.svg"
+                                        alt="Image
+                                    d'une étoile"
+                                    />
+                                    <img
+                                        src="assets/images/star.svg"
+                                        alt="Image d'une
+                                    étoile"
+                                    />
                                     <img
                                         src="assets/images/star.svg"
                                         alt="Image d'une étoile"
