--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="flex flex-col items-center">
                         <div>
                             <div
-                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(./assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
