--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
@@ -161,7 +161,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
@@ -200,7 +200,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
@@ -256,7 +256,7 @@
                     <div class="flex flex-col items-center">
                         <div>
                             <div
-                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
@@ -299,7 +299,7 @@
 
                         <div>
                             <div
-                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
@@ -341,7 +341,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
@@ -383,7 +383,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
