--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
             >
                 <div class="flex flex-col items-center mt-8 w-64">
                     <h2 class="mb-4">Les formations populaires</h2>
-                    <div class="flex flex-col items-center">
+                    <div
+                        class="flex flex-col items-center md:flex-row md:items-stretch md:gap-36"
+                    >
                         <div>
                             <div
-                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-72"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
@@ -120,7 +122,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-72"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
@@ -161,7 +163,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-72"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
@@ -200,7 +202,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-72"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-white rounded-2xl"
@@ -252,11 +254,13 @@
                     id="coursenew"
                     class="flex flex-col items-center mt-8 w-64"
                 >
-                    <h3>Les formations récentes</h3>
-                    <div class="flex flex-col items-center">
+                    <h3 class="mb-4">Les formations récentes</h3>
+                    <div
+                        class="flex flex-col items-center md:flex-row md:items-stretch md:gap-36"
+                    >
                         <div>
                             <div
-                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-72"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
@@ -299,7 +303,7 @@
 
                         <div>
                             <div
-                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-72"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
@@ -341,7 +345,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-72"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
@@ -383,7 +387,7 @@
                         </div>
                         <div>
                             <div
-                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52"
+                                class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-72"
                             >
                                 <div
                                     class="mt-48 ml-32 pl-2 pr-2 flex bg-amber-500 rounded-2xl"
@@ -428,9 +432,9 @@
                     </div>
                 </div>
             </div>
-            <h3 class="justify-self-center">AVIS CLIENTS</h3>
-            <div class="flex flex-col gap-4">
-                <div class="flex flex-col items-center">
+            <h3 class="justify-self-center mb-4">AVIS CLIENTS</h3>
+            <div class="flex flex-col gap-4 md:flex-row">
+                <div class="flex flex-col items-center md:w-[50%]">
                     <img src="resources/juliette.png" />
                     <h4>Juliette</h4>
                     <div class="flex">
@@ -464,7 +468,7 @@
                     </p>
                 </div>
 
-                <div class="flex flex-col items-center">
+                <div class="flex flex-col items-center md:w-[50%]">
                     <img src="resources/camille.png" />
                     <h4>Camille</h4>
                     <div class="flex">
