fixing hero path

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </header>
         <main>
             <div
-                class="pt-20 m-0 flex flex-col text-center justify-around gap-7 h-100 bg-[linear-gradient(94.01deg,rgba(2,6,23,0.85)_3.11%,rgba(2,6,23,0.60)_45%,rgba(2,6,23,0.85)_98.45%),radial-gradient(900px_circle_at_30%_30%,rgba(217,70,239,0.35),transparent_55%),radial-gradient(900px_circle_at_70%_60%,rgba(34,211,238,0.25),transparent_55%),url('/assets/images/hero_mobile.png')] md:bg-[linear-gradient(94.01deg,rgba(2,6,23,0.85)_3.11%,rgba(2,6,23,0.60)_45%,rgba(2,6,23,0.85)_98.45%),radial-gradient(900px_circle_at_30%_30%,rgba(217,70,239,0.35),transparent_55%),radial-gradient(900px_circle_at_70%_60%,rgba(34,211,238,0.25),transparent_55%),url('/assets/images/hero_desktop.png')] bg-cover bg-center"
+                class="pt-20 m-0 flex flex-col text-center justify-around gap-7 h-100 bg-[linear-gradient(94.01deg,rgba(2,6,23,0.85)_3.11%,rgba(2,6,23,0.60)_45%,rgba(2,6,23,0.85)_98.45%),radial-gradient(900px_circle_at_30%_30%,rgba(217,70,239,0.35),transparent_55%),radial-gradient(900px_circle_at_70%_60%,rgba(34,211,238,0.25),transparent_55%),url('../assets/images/hero_mobile.png')] md:bg-[linear-gradient(94.01deg,rgba(2,6,23,0.85)_3.11%,rgba(2,6,23,0.60)_45%,rgba(2,6,23,0.85)_98.45%),radial-gradient(900px_circle_at_30%_30%,rgba(217,70,239,0.35),transparent_55%),radial-gradient(900px_circle_at_70%_60%,rgba(34,211,238,0.25),transparent_55%),url('../assets/images/hero_desktop.png')] bg-cover bg-center"
             >
                 <h1 class="text-white text-2xl md:text-4xl">
                     KLIVIO, L'ALLIÉ DE VOTRE PROGRESSION
