--- a/index.html
+++ b/index.html
@@ -488,10 +488,10 @@
                 </h3>
             </div>
             <div
-                class="flex flex-col gap-4 md:flex-row bg-neutral-900 text-white pb-4"
+                class="flex flex-col gap-4 md:flex-row bg-neutral-900 text-white pb-4 md:justify-center"
             >
                 <div
-                    class="flex flex-col items-center ml-4 mr-4 md:w-[50%] rounded-3xl bg-white/5 border border-white/10 p-4 md:ml-8"
+                    class="flex flex-col items-center ml-4 mr-4 md:w-[30%] rounded-3xl bg-white/5 border border-white/10 p-4 md:ml-8"
                 >
                     <img
                         src="resources/juliette.png"
@@ -531,7 +531,7 @@
                 </div>
 
                 <div
-                    class="flex flex-col items-center ml-4 mr-4 md:w-[50%] rounded-3xl bg-white/5 border border-white/10 p-4 md:mr-8"
+                    class="flex flex-col items-center ml-4 mr-4 md:w-[30%] rounded-3xl bg-white/5 border border-white/10 p-4 md:mr-8"
                 >
                     <img
                         src="resources/camille.png"
@@ -569,11 +569,13 @@
                     </p>
                 </div>
             </div>
-            <div class="md:flex md:p-8 bg-neutral-900 text-white pl-4 pr-4">
-                <div class="md:w-full md:flex md:justify-center gap-96">
-                    <div
-                        class="rounded-3xl bg-white/5 border border-white/10 md:pr-12 p-4"
-                    >
+            <div
+                class="md:flex md:p-8 bg-neutral-900 text-white pl-4 pr-4 md:justify-center"
+            >
+                <div
+                    class="md:w-full md:flex gap-4 rounded-3xl bg-white/5 border border-white/10 p-4 md:max-w-[80%] md:justify-center"
+                >
+                    <div class="">
                         <div
                             class="md:flex md:flex-row md:items-center md:justify-around"
                         >
@@ -582,16 +584,20 @@
                             </h3>
                         </div>
                         <ul
-                            class="flex flex-col items-center ml-12 max-w-60 md:w-full mb-8"
+                            class="flex flex-col items-center ml-12 md:ml-0 max-w-60 md:w-full mb-8 gap-4"
                         >
-                            <li class="flex gap-6">
+                            <li
+                                class="flex gap-6 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                            >
                                 <img
                                     src="assets/images/arrow.svg"
                                     alt="icone d'une flèche"
                                 />
                                 <span>Suivi de sa progression</span>
                             </li>
-                            <li class="flex gap-6">
+                            <li
+                                class="flex gap-6 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                            >
                                 <img
                                     src="assets/images/pen.svg"
                                     alt="icone d'un stylo"
@@ -601,7 +607,9 @@
                                     pratique</span
                                 >
                             </li>
-                            <li class="flex gap-6">
+                            <li
+                                class="flex gap-6 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                            >
                                 <img
                                     src="assets/images/download-02.svg"
                                     alt="icone de téléchargement"
@@ -611,21 +619,28 @@
                                     formations</span
                                 >
                             </li>
-                            <li class="flex gap-6">
+                            <li
+                                class="flex gap-6 ml-1.5 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                            >
                                 <img
                                     src="assets/images/star-02.svg"
                                     alt="icone d'étoile"
                                 />
                                 <span>Contenu qualitatif et vérifié</span>
                             </li>
-                            <li id="advantage__list-span" class="flex gap-6">
+                            <li
+                                id="advantage__list-span"
+                                class="flex gap-6 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                            >
                                 <img
                                     src="assets/images/clock.svg"
                                     alt="icone d'horloge"
                                 />
                                 <span>Suivi en autonomie, 24h/24, 7j/7</span>
                             </li>
-                            <li class="flex gap-6">
+                            <li
+                                class="flex gap-6 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                            >
                                 <img
                                     src="assets/images/chat.svg"
                                     alt="icone d'une chatbox"
@@ -637,10 +652,11 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="hidden md:flex">
+                    <div class="hidden md:flex md:justify-end">
                         <img
                             src="assets/images/advantages_desktop.svg"
                             alt="image d'une employée"
+                            class="md:max-w-[80%]"
                         />
                     </div>
                     <div class="md:hidden p-8">
