--- a/index.html
+++ b/index.html
@@ -670,30 +670,37 @@
             <div
                 class="flex flex-col items-center pb-8 bg-neutral-900 text-white md:pl-8 md:pr-8"
             >
-                <div class="rounded-3xl bg-white/5 border border-white/10 p-4">
+                <div
+                    class="rounded-3xl bg-white/5 border border-white/10 p-4 md:max-w-[80%]"
+                >
                     <div class="justify-self-center">
                         <h3 class="mb-4 mt-4">CRÉEZ VOS FORMATIONS</h3>
                     </div>
-                    <div class="max-w-80 mb-8 md:flex md:max-w-full">
+                    <div
+                        class="max-w-80 mb-8 md:flex md:max-w-full md:mr-8 md:mb-0 md:pb-4"
+                    >
                         <div class="md:hidden">
                             <img
                                 src="assets/images/owncourse_mobile.png"
                                 alt="Plan sur un bureau d'un employé prenant des notes sur son pc"
                             />
                         </div>
-                        <div class="hidden md:flex">
+                        <div class="hidden md:flex md:justify-center">
                             <img
                                 src="assets/images/owncourse_desktop.jpg"
                                 alt="Plan sur un bureau d'un employé prenant des notes sur son pc"
+                                class="md:max-w-[80%]"
                             />
                         </div>
                         <ul
-                            class="flex flex-col gap-2 items-start mt-4 md:ml-8"
+                            class="flex flex-col gap-4 items-start mt-4 md:ml-8"
                         >
                             <li class="hidden">
                                 CRÉEZ VOS FORMATIONS AVEC KLIVIO
                             </li>
-                            <li class="flex gap-4 items-start">
+                            <li
+                                class="flex gap-4 items-start rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                            >
                                 <img
                                     src="assets/images/hand.svg"
                                     alt="icone d'une main"
@@ -704,7 +711,9 @@
                                 >
                             </li>
 
-                            <li class="flex gap-4 items-start">
+                            <li
+                                class="flex gap-4 items-start rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                            >
                                 <img
                                     src="assets/images/heart.svg"
                                     alt="icone d'un coeur"
@@ -712,7 +721,9 @@
                                 <span>Mise en avant sur la plateforme</span>
                             </li>
 
-                            <li class="flex gap-4 items-start">
+                            <li
+                                class="flex gap-4 items-start rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                            >
                                 <img
                                     src="assets/images/penwhite.svg"
                                     alt="icone d'un stylo"
@@ -723,7 +734,9 @@
                                 >
                             </li>
 
-                            <li class="flex gap-4 items-start">
+                            <li
+                                class="flex gap-4 items-start rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                            >
                                 <img
                                     src="assets/images/setting.svg"
                                     alt="icone d'un engrenage"
@@ -738,7 +751,9 @@
                                 >
                             </li>
 
-                            <li class="flex gap-4 items-start">
+                            <li
+                                class="flex gap-4 items-start rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                            >
                                 <img
                                     src="assets/images/border.svg"
                                     alt="icon d'un portrait"
