--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         class="flex flex-col items-center gap-4 md:flex-row md:flex-wrap md:justify-center md:gap-8"
                     >
                         <div
-                            class="rounded-3xl bg-white/5 border border-white/10 p-4 md:w-64"
+                            class="md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-64"
                         >
                             <div
                                 class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-full md:bg-cover md:bg-center md:relative"
@@ -136,7 +136,7 @@
                             </div>
                         </div>
                         <div
-                            class="rounded-3xl bg-white/5 border border-white/10 p-4 md:w-64"
+                            class="md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-64"
                         >
                             <div
                                 class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-full md:bg-cover md:bg-center md:relative"
@@ -179,7 +179,7 @@
                             </div>
                         </div>
                         <div
-                            class="rounded-3xl bg-white/5 border border-white/10 p-4 md:w-64"
+                            class="md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-64"
                         >
                             <div
                                 class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-full md:bg-cover md:bg-center md:relative"
@@ -220,7 +220,7 @@
                             </div>
                         </div>
                         <div
-                            class="rounded-3xl bg-white/5 border border-white/10 p-4 md:w-64"
+                            class="md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-64"
                         >
                             <div
                                 class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-full md:bg-cover md:bg-center md:relative"
@@ -284,7 +284,7 @@
                         class="flex flex-col items-center gap-4 md:flex-row md:flex-wrap md:justify-center md:gap-8"
                     >
                         <div
-                            class="rounded-3xl bg-white/5 border border-white/10 p-4 md:w-64"
+                            class="md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-64"
                         >
                             <div
                                 class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-full md:bg-cover md:bg-center md:relative"
@@ -332,7 +332,7 @@
                         </div>
 
                         <div
-                            class="rounded-3xl bg-white/5 border border-white/10 p-4 md:w-64"
+                            class="md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-64"
                         >
                             <div
                                 class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-full md:bg-cover md:bg-center md:relative"
@@ -380,7 +380,7 @@
                         </div>
 
                         <div
-                            class="rounded-3xl bg-white/5 border border-white/10 p-4 md:w-64"
+                            class="md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-64"
                         >
                             <div
                                 class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-full md:bg-cover md:bg-center md:relative"
@@ -428,7 +428,7 @@
                         </div>
 
                         <div
-                            class="rounded-3xl bg-white/5 border border-white/10 p-4 md:w-64"
+                            class="md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-64"
                         >
                             <div
                                 class="bg-[url(../assets/images/img-course.png)] items-center flex flex-col h-52 md:w-full md:bg-cover md:bg-center md:relative"
@@ -491,7 +491,7 @@
                 class="flex flex-col gap-4 md:flex-row bg-neutral-900 text-white pb-4 md:justify-center"
             >
                 <div
-                    class="flex flex-col items-center ml-4 mr-4 md:w-[30%] rounded-3xl bg-white/5 border border-white/10 p-4 md:ml-8"
+                    class="flex flex-col items-center ml-4 mr-4 md:w-[30%] md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:ml-8"
                 >
                     <img
                         src="resources/juliette.png"
@@ -531,7 +531,7 @@
                 </div>
 
                 <div
-                    class="flex flex-col items-center ml-4 mr-4 md:w-[30%] rounded-3xl bg-white/5 border border-white/10 p-4 md:mr-8"
+                    class="flex flex-col items-center ml-4 mr-4 md:w-[30%] md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:mr-8"
                 >
                     <img
                         src="resources/camille.png"
@@ -573,7 +573,7 @@
                 class="md:flex md:p-8 bg-neutral-900 text-white pl-4 pr-4 md:justify-center"
             >
                 <div
-                    class="md:w-full md:flex gap-4 rounded-3xl bg-white/5 border border-white/10 p-4 md:max-w-[80%] md:justify-center"
+                    class="md:w-full md:flex gap-4 md:rounded-3xl md:bg-white/5 md:border md:border-white/10 p-4 md:max-w-[80%] md:justify-center"
                 >
                     <div class="">
                         <div
@@ -587,7 +587,7 @@
                             class="flex flex-col items-center ml-12 md:ml-0 max-w-60 md:w-full mb-8 gap-4"
                         >
                             <li
-                                class="flex gap-6 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                                class="flex gap-6 md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-[27rem]"
                             >
                                 <img
                                     src="assets/images/arrow.svg"
@@ -596,7 +596,7 @@
                                 <span>Suivi de sa progression</span>
                             </li>
                             <li
-                                class="flex gap-6 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                                class="flex gap-6 md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-[27rem]"
                             >
                                 <img
                                     src="assets/images/pen.svg"
@@ -608,7 +608,7 @@
                                 >
                             </li>
                             <li
-                                class="flex gap-6 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                                class="flex gap-6 md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-[27rem]"
                             >
                                 <img
                                     src="assets/images/download-02.svg"
@@ -620,7 +620,7 @@
                                 >
                             </li>
                             <li
-                                class="flex gap-6 ml-1.5 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                                class="flex gap-6 ml-1.5 md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-[27rem]"
                             >
                                 <img
                                     src="assets/images/star-02.svg"
@@ -630,7 +630,7 @@
                             </li>
                             <li
                                 id="advantage__list-span"
-                                class="flex gap-6 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                                class="flex gap-6 md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-[27rem]"
                             >
                                 <img
                                     src="assets/images/clock.svg"
@@ -639,7 +639,7 @@
                                 <span>Suivi en autonomie, 24h/24, 7j/7</span>
                             </li>
                             <li
-                                class="flex gap-6 rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                                class="flex gap-6 md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-[27rem]"
                             >
                                 <img
                                     src="assets/images/chat.svg"
@@ -671,7 +671,7 @@
                 class="flex flex-col items-center pb-8 bg-neutral-900 text-white md:pl-8 md:pr-8"
             >
                 <div
-                    class="rounded-3xl bg-white/5 border border-white/10 p-4 md:max-w-[80%]"
+                    class="md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:max-w-[80%]"
                 >
                     <div class="justify-self-center">
                         <h3 class="mb-4 mt-4">CRÉEZ VOS FORMATIONS</h3>
@@ -699,7 +699,7 @@
                                 CRÉEZ VOS FORMATIONS AVEC KLIVIO
                             </li>
                             <li
-                                class="flex gap-4 items-start rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                                class="flex gap-4 items-start md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-[27rem]"
                             >
                                 <img
                                     src="assets/images/hand.svg"
@@ -712,7 +712,7 @@
                             </li>
 
                             <li
-                                class="flex gap-4 items-start rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                                class="flex gap-4 items-start md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-[27rem]"
                             >
                                 <img
                                     src="assets/images/heart.svg"
@@ -722,7 +722,7 @@
                             </li>
 
                             <li
-                                class="flex gap-4 items-start rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                                class="flex gap-4 items-start md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-[27rem]"
                             >
                                 <img
                                     src="assets/images/penwhite.svg"
@@ -735,7 +735,7 @@
                             </li>
 
                             <li
-                                class="flex gap-4 items-start rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                                class="flex gap-4 items-start md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-[27rem]"
                             >
                                 <img
                                     src="assets/images/setting.svg"
@@ -752,7 +752,7 @@
                             </li>
 
                             <li
-                                class="flex gap-4 items-start rounded-3xl bg-white/5 border border-white/10 p-4 md:w-[27rem]"
+                                class="flex gap-4 items-start md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:w-[27rem]"
                             >
                                 <img
                                     src="assets/images/border.svg"
@@ -768,35 +768,43 @@
                     </div>
                 </div>
             </div>
-            <div class="md:flex">
+            <div class="md:flex md:flex-col">
                 <div
-                    class="flex flex-col items-center pb-4 md:w-[50%] bg-neutral-900 text-white"
+                    class="flex flex-col items-center pb-4 bg-neutral-900 text-white"
                 >
-                    <h3 class="pt-8 pb-8">À PROPOS DE KLIVIO</h3>
-                    <p class="max-w-72">
-                        Chez Klivio, nous défendons des valeurs fondamentales
-                        qui définissent notre approche éducative. Nous nous
-                        engageons à assurer une rémunération équitable pour les
-                        créateurs de contenu, reconnaissant la qualité de leur
-                        travail.<br />
-                        <br />
-                        Favorisant l'autonomie d'apprentissage, notre plateforme
-                        offre la flexibilité écessaire pour explorer divers
-                        sujets. La transparence est au cœur de notre démarche,
-                        garantissant une clarté totale sur les formations que
-                        les instructeurs proposent. Ensemble, ces valeurs
-                        forment le socle d'une ducation enrichissante et
-                        équitable, guidant notre mission d'offrir des
-                        pportunités d'apprentissage de qualité
-                    </p>
+                    <div
+                        class="md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 flex flex-col md:items-center md:max-w-[60%] md:pb-8"
+                    >
+                        <h3 class="pt-8 pb-8 self-center">
+                            À PROPOS DE KLIVIO
+                        </h3>
+                        <p class="max-w-72 md:max-w-[75%] ml-9 md:ml-0">
+                            Chez Klivio, nous défendons des valeurs
+                            fondamentales qui définissent notre approche
+                            éducative. Nous nous engageons à assurer une
+                            rémunération équitable pour les créateurs de
+                            contenu, reconnaissant la qualité de leur
+                            travail.<br />
+                            <br />
+                            Favorisant l'autonomie d'apprentissage, notre
+                            plateforme offre la flexibilité écessaire pour
+                            explorer divers sujets. La transparence est au cœur
+                            de notre démarche, garantissant une clarté totale
+                            sur les formations que les instructeurs proposent.
+                            Ensemble, ces valeurs forment le socle d'une
+                            ducation enrichissante et équitable, guidant notre
+                            mission d'offrir des pportunités d'apprentissage de
+                            qualité
+                        </p>
+                    </div>
                 </div>
                 <div
-                    class="flex justify-center pt-36 pb-36 bg-neutral-900 gap-8 md:w-[50%]"
+                    class="flex justify-center bg-neutral-900 gap-8 md:pb-8 md:pt-4"
                 >
                     <img
                         src="resources/logo.png"
                         alt="Image du logo du site"
-                        class="max-w-48 md:w-auto md:h-[30%] md:mt-16"
+                        class="max-w-48 md:w-auto md:h-[30%]"
                     />
                 </div>
             </div>
@@ -804,9 +812,9 @@
                 class="flex flex-col bg-neutral-900 text-white md:pb-4 pl-4 pr-4 pb-4"
             >
                 <div
-                    class="rounded-3xl bg-white/5 border border-white/10 p-4 md:ml-96 md:mr-96"
+                    class="md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4 md:ml-96 md:mr-96"
                 >
-                    <h3 class="mt-8 pb-4 self-center md:justify-self-center">
+                    <h3 class="mt-8 pb-4 self-center justify-self-center">
                         Nous contacter
                     </h3>
 
@@ -861,7 +869,7 @@
                 />
                 <div class="flex flex-col gap-4 md:flex-row md:gap-20">
                     <ul
-                        class="flex flex-col items-center rounded-3xl bg-white/5 border border-white/10 p-4"
+                        class="flex flex-col items-center md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4"
                     >
                         <li class="mb-4">Mentions légales</li>
                         <div class="flex flex-col items-center gap-1">
@@ -872,7 +880,7 @@
                         </div>
                     </ul>
                     <ul
-                        class="flex flex-col gap-4 rounded-3xl bg-white/5 border border-white/10 p-4"
+                        class="flex flex-col gap-4 md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4md:rounded-3xl md:bg-white/5 md:border md:border-white/10 md:p-4"
                     >
                         <li class="flex flex-col items-center mt-4">
                             Coordonnées
