--- a/index.html
+++ b/index.html
@@ -685,7 +685,9 @@
                                 alt="Plan sur un bureau d'un employé prenant des notes sur son pc"
                             />
                         </div>
-                        <div class="hidden md:flex md:justify-center">
+                        <div
+                            class="hidden md:flex md:justify-center md:items-center"
+                        >
                             <img
                                 src="assets/images/owncourse_desktop.jpg"
                                 alt="Plan sur un bureau d'un employé prenant des notes sur son pc"
