--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     </div>
                     <div>
                         <button
-                            class="m-4 text-neutral-300 border border-neutral-600 hover:bg-white/5 hover:text-white transition pt-1 pb-1 pl-4 pr-4 rounded-lg"
+                            class="m-4 text-neutral-300 border border-neutral-600 hover:bg-white/5 hover:text-white transition pt-1 pb-1 pl-4 pr-4 rounded-lg mt-10"
                         >
                             Voir plus de formation
                         </button>
@@ -475,7 +475,7 @@
 
                     <div>
                         <button
-                            class="mt-4 mb-8 text-neutral-300 border border-neutral-600 hover:bg-white/5 hover:text-white transition pt-1 pb-1 pl-4 pr-4 rounded-lg"
+                            class="mt-4 mb-8 text-neutral-300 border border-neutral-600 hover:bg-white/5 hover:text-white transition pt-1 pb-1 pl-4 pr-4 rounded-lg mt-10"
                         >
                             Voir plus de formation
                         </button>
