--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="flex items-center gap-4">
                     <a class="inline-flex items-center">
                         <img
-                            src="resources/logo.png"
+                            src="assets/images/logo.png"
                             alt="Logo Klivio"
                             class="w-20 h-8"
                         />
@@ -494,7 +494,7 @@
                     class="flex flex-col items-center ml-4 mr-4 md:w-[30%] rounded-3xl bg-white/5 border border-white/10 p-4 md:ml-8"
                 >
                     <img
-                        src="resources/juliette.png"
+                        src="assets/images/juliette.png"
                         alt="cliente souriante blonde"
                         class="rounded-[4rem]"
                     />
@@ -534,7 +534,7 @@
                     class="flex flex-col items-center ml-4 mr-4 md:w-[30%] rounded-3xl bg-white/5 border border-white/10 p-4 md:mr-8"
                 >
                     <img
-                        src="resources/camille.png"
+                        src="assets/images/camille.png"
                         alt="cliente souriante vu de profil, brune"
                         class="rounded-[4rem]"
                     />
@@ -863,7 +863,7 @@
         <footer class="bg-neutral-900 text-white">
             <div class="flex flex-col items-center pb-16 pt-16 md:gap-4">
                 <img
-                    src="resources/logo.png"
+                    src="assets/images/logo.png"
                     alt="Image du logo du site"
                     class="max-w-52 mt-8 mb-8"
                 />
