--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                 </div>
                 <div class="flex justify-center bg-neutral-900 gap-8 pb-8 pt-4">
                     <img
-                        src="resources/logo.png"
+                        src="assets/images/logo.png"
                         alt="Image du logo du site"
                         class="max-w-48 md:w-auto md:h-[30%]"
                     />
